--- a/index.html
+++ b/index.html
@@ -247,16 +247,7 @@
         </footer>
     </div>
 
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
